--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "./node_modules/.bin/tsc",
-    "start": "node ./dist/index.js"
+    "start": "node -r dotenv/config ./dist/index.js"
   },
   "author": "Filipe Oliveira",
   "license": "MIT",
@@ -17,5 +17,13 @@
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "ws": "^8.16.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.10.5",
+    "tslint": "^6.1.3",
+    "typescript": "^5.3.3"
   }
 }
