--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "./node_modules/.bin/tsc",
-    "start": "node -r dotenv/config ./dist/index.js"
+    "start": "./node_modules/.bin/tsc && node -r dotenv/config ./dist/index.js"
   },
   "author": "Filipe Oliveira",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/dotenv-safe": "^8.1.5",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.5",
     "tslint": "^6.1.3",
