--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "mysql2": "^3.7.0",
+    "sequelize": "^6.35.2",
     "ws": "^8.16.0"
   },
   "devDependencies": {
