--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.7.0",
+    "reflect-metadata": "^0.2.1",
     "sequelize": "^6.35.2",
+    "sequelize-typescript": "^2.1.6",
+    "sqlite3": "^5.1.7",
     "ws": "^8.16.0"
   },
   "devDependencies": {
@@ -28,7 +31,9 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.10.5",
+    "@types/node": "^20.11.0",
+    "@types/validator": "^13.11.8",
+    "sequelize-cli": "^6.6.2",
     "tslint": "^6.1.3",
     "typescript": "^5.3.3"
   }
