--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
         "outDir": "dist",
         "sourceMap": true,
         "strict": true,
-        "target": "es2020",
-        "esModuleInterop": true
+        "target": "es6",
+        "esModuleInterop": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
     },
     "include": [
         "src"
