--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "System that send notifications to who is connected",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'",
     "build": "./node_modules/.bin/tsc",
     "start": "./node_modules/.bin/tsc && node -r dotenv/config ./dist/index.js"
   },
@@ -26,14 +26,20 @@
     "ws": "^8.16.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.11",
     "@types/cors": "^2.8.17",
     "@types/dotenv-safe": "^8.1.5",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.0",
     "@types/validator": "^13.11.8",
+    "chai": "^5.0.0",
+    "mocha": "^10.2.0",
+    "node-mocks-http": "^1.14.1",
     "sequelize-cli": "^6.6.2",
+    "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
     "typescript": "^5.3.3"
   }
